Prepare for release 0.1.0

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -13,9 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: install valgrind 
-      run: sudo apt install valgrind   
-    - name: build for debug
-      run: make debug
-    - name: check for memory leaks
-      run: make leak-check
+    - name: build
+      run: make all
