✨ Feature - Operator overload on Section and Root classes

--- a/examples/file.toml
+++ b/examples/file.toml
@@ -1,7 +1,8 @@
 [test]
-  b = false
+  b = true
   i = 13
   f = 9.99
   # Now it will handle also empty lines
 
   s = "Hello There"
+  a = [1, 2, [2]]
