--- a/examples/file.toml
+++ b/examples/file.toml
@@ -5,4 +5,4 @@
   # Now it will handle also empty lines
 
   s = "Hello There"
-  a = [1, 2, [2]]
+  a = [1, 2, [2]] # unsupported at the moment (I'm working on it)
